--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
             width: 400px;
             height: 400px;
         }
+        .button {
+            width: 400px;
+            height: 400px;
+            border: 1px solid #767676;
+            margin-top: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #efefef;
+        }
     </style>
     <button>Батончик</button>
+    <div class="button">Батончик дивовский</div>
 </body>
 </html>
