--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             background-color: #efefef;
         }
     </style>
-    <button onclick=downloadTest>Тыкни на батончик</button>
+    <button onclick="downloadTest()">Тыкни на батончик</button>
 </body>
     <script>
     function downloadTest() {
