--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ const request = fetch('https://pdf-gen.test.certitdev.ru/html/generate_pdf?downl
     body: formData
 }).then(async q => {
 const url = await q.json();
-document.body.insertAdjacentHTML('afterbegin', `<a download type="application/pdf" href="${url.url}">123123123</a>`)
+document.body.insertAdjacentHTML('afterbegin', `<a download href="${url.url}">Скачать</a>`);
+    document.body.insertAdjacentHTML('afterbegin', `<a href="${url.url}">Открыть</a>`)
 })
     }
     </script>
